fix: audit bug fixes — Trade PnL, null guards, @Transactional, capital config, TradeRequest validation
Phase 1: TradeRequest.isValid() — fixed operator precedence bug allowing
invalid STOP orders without stopPrice
Phase 2: Null direction guards in 3 places (PaperTradingServiceImpl,
LiveTradingService, PositionService)
Phase 3: PositionEntity.toDomain() — null status defaults to OPEN
Phase 4: @Transactional on 7 closePosition methods across 4 classes
Phase 5: Capital config — unified maxCapitalPerPosition to 200000,
CapitalTracker now uses PaperTradingProperties instead of hardcoded 50K
Phase 6: Trade record — added direction field, fixed PnL for SHORT,
deducted fees from PnL, updated TradeEntity + migration